--- a/code/app/be/objectify/deadbolt/java/views/dynamicOr.scala.html
+++ b/code/app/be/objectify/deadbolt/java/views/dynamicOr.scala.html
@@ -1,6 +1,10 @@
+@import play.api.Application
 @import be.objectify.deadbolt.java.DeadboltHandler
-@import be.objectify.deadbolt.java.ViewAccessPoint.Implicits._
-@import play.api.Play.current
+@import be.objectify.deadbolt.java.ViewSupport
+@import be.objectify.deadbolt.java.cache.HandlerCache
+
+@this(application: Application, viewSupport: ViewSupport, handlerCache: HandlerCache)
+
 @(name: String, meta: Optional[String] = Optional.empty(), handler: DeadboltHandler = handlerCache.get(), content: Optional[String] = Optional.empty(), timeout: java.util.function.Supplier[Long] = viewSupport.defaultTimeout)(body: => Html)(alternativeBody: => Html)
 
 @if(viewSupport.viewDynamic(name, meta, handler, content, timeout.get())) {
