--- a/code/app/be/objectify/deadbolt/java/views/patternOr.scala.html
+++ b/code/app/be/objectify/deadbolt/java/views/patternOr.scala.html
@@ -1,7 +1,11 @@
+@import play.api.Application
 @import be.objectify.deadbolt.java.DeadboltHandler
-@import be.objectify.deadbolt.java.ViewAccessPoint.Implicits._
 @import be.objectify.deadbolt.java.models.PatternType
-@import play.api.Play.current
+@import be.objectify.deadbolt.java.ViewSupport
+@import be.objectify.deadbolt.java.cache.HandlerCache
+
+@this(application: Application, viewSupport: ViewSupport, handlerCache: HandlerCache)
+
 @(value: String, patternType: PatternType = PatternType.EQUALITY, meta: Optional[String] = Optional.empty(), invert: java.lang.Boolean = false, handler: DeadboltHandler = handlerCache.get(), content: Optional[String] = Optional.empty(), timeout: java.util.function.Supplier[Long] = viewSupport.defaultTimeout)(body: => Html)(alternativeBody: => Html)
 
 @if(viewSupport.viewPattern(value, patternType, meta, invert, handler, content, timeout.get())) {
