--- a/code/app/be/objectify/deadbolt/java/views/restrict.scala.html
+++ b/code/app/be/objectify/deadbolt/java/views/restrict.scala.html
@@ -1,8 +1,11 @@
 @import java.util
-
+@import play.api.Application
 @import be.objectify.deadbolt.java.DeadboltHandler
-@import be.objectify.deadbolt.java.ViewAccessPoint.Implicits._
-@import play.api.Play.current
+@import be.objectify.deadbolt.java.ViewSupport
+@import be.objectify.deadbolt.java.cache.HandlerCache
+
+@this(application: Application, viewSupport: ViewSupport, handlerCache: HandlerCache)
+
 @(roles: util.List[Array[String]], handler: DeadboltHandler = handlerCache.get(), content: Optional[String] = Optional.empty(), timeout: java.util.function.Supplier[Long] = viewSupport.defaultTimeout)(body: => Html)
 
 @if(viewSupport.viewRestrict(roles, handler, content, timeout.get())) {
